--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>BLS - About</title>
-    <link rel="stylesheet" href="about.css">
-    <link href="img/favicon.ico" rel="icon">
+    <link rel="stylesheet" href="styles/about.css">
+    <link href="img/logo/favicon.ico" rel="icon">
 </head>
 <nav class="navbar">
   <ul>
@@ -21,17 +21,12 @@
       <div class="cards">
         <div class="services">
           <div class="content content-2">
-            <div class="pics"><img src="img/vinh.jpg"></div>
+            <div class="pics"><img src="img/officers/vinh.jpg"></div>
             <h2>Vinh Tran</h2>
             <p>President <i>'25</i></p>
           </div>
           <div class="content content-3">
-            <div class="pics"><img src="img/jolia.jpg"></div>
-            <h2>Jolia Tsan </h2>
-            <p>Vice - President <i>'25</i></p>
-          </div>
-          <div class="content content-3">
-            <div class="pics"><img src="img/will.jpg"></div>
+            <div class="pics"><img src="img/officers/will.jpg"></div>
             <h2>William Liang </h2>
             <p>Secretary <i>'25</i></p>
           </div>
@@ -40,17 +35,17 @@
       <div class="cards">
         <div class="services">
           <div class="content content-1">
-            <div class="pics"><img src="img/sebastian.png"></div>
+            <div class="pics"><img src="img/officers/sebastian.png"></div>
             <h2>Sebastian Inezian</h2>
             <p>Treasurer <i>'25</i></p>
           </div>
           <div class="content content-1">
-            <div class="pics"><img src="img/simon.jpg"></div>
+            <div class="pics"><img src="img/officers/simon.jpg"></div>
             <h2>Simon Ha</h2>
             <p>External Liaison <i>'25</i></p>
           </div>
           <div class="content content-1">
-            <div class="pics"><img src="img/ayman.png"></div>
+            <div class="pics"><img src="img/officers/ayman.png"></div>
             <h2>Ayman Amin</h2>
             <p>Internal Liaison <i>'25</i></p>
           </div>
@@ -61,7 +56,7 @@
         <div class="services" style="padding-left: 100px; padding-right: 100px;">
           <div class="content content-1" style="border: none;">
             <p style="text-align: center;">
-              <img src="img/about.png" style="justify-content: center; display: block; margin: auto; border-radius: 10px; width: 150px; height: auto;"><br>
+              <img src="img/logo/about.png" style="justify-content: center; display: block; margin: auto; border-radius: 10px; width: 150px; height: auto;"><br>
               The Boston Latin School Web Development Club is a space for BLS scholars to explore and learn about front-end web development. A revival of the original web development club, which ceased operations after senior members graduated, our hope is to provide the resources necessary for scholars to build their own portfolios, games, websites, and ultimately, to act as a community that collaborates to educate students about web development. Whether you are a complete beginner or an experienced programmer, all are welcome!
               <br><br>
               If there are any questions, you can contact us through our email, <b>bls.webdevclub@gmail.com</b>, or alternatively, you can ask one of our hard-working officers.
@@ -98,17 +93,4 @@
       </div><br>
   </body>
   <script src="main.js"></script>
-  <footer>
-    <div class="footer-container">
-        <div class="footer-section">
-            <a href="#" style="color: #A8DADC;"><h3>Email</h3></a>
-        </div>
-        <div class="footer-section">
-          <a href="resources.html" style="color: #A8DADC;"><h3>Resources</h3></a>
-        </div>
-        <div class="footer-section">
-          <a href="https://docs.google.com/forms/d/13NupHW2ZiYjLk18UHCy2voDZZXNqEpBbzKxeUeEziDQ/edit" style="color: #A8DADC;"><h3>Join</h3></a>
-        </div>
-    </div>
-  </footer>
 </html>
