--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>BLS Web Development</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="img/favicon.ico" rel="icon">
+    <link rel="stylesheet" href="styles/index.css">
+    <link href="img/logo/favicon.ico" rel="icon">
 </head>
 <body>
     <nav class="navbar">
