--- a/resources.html
+++ b/resources.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>BLS - About</title>
-    <link rel="stylesheet" href="resources.css">
-    <link href="img/favicon.ico" rel="icon">
+    <link rel="stylesheet" href="styles/resources.css">
+    <link href="img/logo/favicon.ico" rel="icon">
 </head>
 <nav class="navbar">
   <ul>
@@ -24,12 +24,12 @@
         </div>
         <div class="services">
           <div class="content content-1">
-            <div class="pics"><img src="img/launchhacks.png"></div>
+            <div class="pics"><img src="img/events/launchhacks.png"></div>
             <h2>LaunchHacks III</h2>
             <p>Apr 5 – 7, 2024</p>
           </div>
           <div class="content content-1">
-            <div class="pics"><img src="img/educatehacks.png"></div>
+            <div class="pics"><img src="img/events/educatehacks.png"></div>
             <h2>EducateHacks</h2>
             <p>Apr 5 – 7, 2024</p>
           </div>
@@ -39,17 +39,17 @@
         </div>
         <div class="services">
             <div class="content content-1">
-              <div class="pics"><img src="img/codegreen.png"></div>
+              <div class="pics"><img src="img/events/codegreen.png"></div>
               <h2>Code Green Conference</h2>
               <p>Dec 3 – 8, 2023</p>
             </div>
             <div class="content content-1">
-              <div class="pics"><img src="img/cornucadia.png"></div>
+              <div class="pics"><img src="img/events/cornucadia.png"></div>
               <h2>Cornucadia</h2>
               <p>Nov 1 - 28, 2023</p>
             </div>
             <div class="content content-1">
-                <div class="pics"><img src="img/learnhacks.png"></div>
+                <div class="pics"><img src="img/events/learnhacks.png"></div>
                 <h2>LearnHacks</h2>
                 <p>Nov 3 - 5, 2023</p>
               </div>
@@ -59,19 +59,19 @@
       <div class="cards">
         <div class="services">
           <div class="content content-1">
-            <div class="pics"><img src="img/html.png"></div>
+            <div class="pics"><img src="img/logo/html.png"></div>
             <h2>HTML</h2>
             <a href="https://www.youtube.com/watch?v=HD13eq_Pmp8&t=11s&ab_channel=BroCode" style="color: black;"><p>Video Tutorial</p></a>
             <a href="https://www.codecademy.com/learn/learn-html" style="color: black;"><p>Interactive Guide</p></a>
           </div>
           <div class="content content-1">
-            <div class="pics"><img src="img/css.png"></div>
+            <div class="pics"><img src="img/logo/css.png"></div>
             <h2>CSS</h2>
             <a href="https://www.youtube.com/watch?v=wRNinF7YQqQ&ab_channel=BroCode" style="color: black;"><p>Video Tutorial</p></a>
             <a href="https://www.codecademy.com/learn/learn-css" style="color: black;"><p>Interactive Guide</p></a>
           </div>
           <div class="content content-1">
-            <div class="pics"><img src="img/js.png"></div>
+            <div class="pics"><img src="img/logo/js.png"></div>
             <h2>Javascript</h2>
             <a href="https://www.youtube.com/watch?v=8dWL3wF_OMw&ab_channel=BroCode" style="color: black;"><p>Video Tutorial</p></a>
             <a href="https://www.codecademy.com/learn/introduction-to-javascript" style="color: black;"><p>Interactive Guide</p></a>
@@ -79,12 +79,12 @@
         </div>
         <div class="services">
             <div class="content content-1">
-              <div class="pics"><img src="img/figma.png"></div>
+              <div class="pics"><img src="img/logo/figma.png"></div>
               <h2>Wireframes</h2>
               <a href="https://www.youtube.com/watch?v=c9Wg6Cb_YlU&ab_channel=freeCodeCamp.org" style="color: black;">Introduction to Figma</a>
             </div>
             <div class="content content-1">
-              <div class="pics"><img src="img/github.png"></div>
+              <div class="pics"><img src="img/logo/github.png"></div>
               <h2>Digital Workspace</h2>
               <a href="https://www.youtube.com/watch?v=RGOj5yH7evk&ab_channel=freeCodeCamp.org" style="color: black;">Introduction to Github</a>
             </div>
@@ -98,18 +98,18 @@
             <p>Vinh Tran</p>
           </div>
           <div class="content content-1">
-            <a href="https://v-iinh.github.io/the-two-of-us/" style="color: black;"><h2>The Two of Us</h2></a>
-            <p>Vinh Tran</p>
+            <a href="https://bstnpl.github.io/" style="color: black;"><h2>BLS Powerlifting</h2></a>
+            <p>Sebastian Inezian</p>
           </div>
           <div class="content content-1">
-            <a href="https://bstnpl.github.io/" style="color: black;"><h2>BLS Powerlifting</h2></a>
+            <a href="https://fredyiscool.github.io" style="color: black;"><h2>Fredy is Cool</h2></a>
             <p>Sebastian Inezian</p>
           </div>
         </div>
         <div class="services">
             <div class="content content-1">
-                <a href="https://fredyiscool.github.io" style="color: black;"><h2>Fredy is Cool</h2></a>
-                <p>Sebastian Inezian</p>
+              <a href="#" style="color: black;"><h2>Coming Soon</h2></a>
+              <p>To Be Added</p>
             </div>
             <div class="content content-1">
                 <a href="#" style="color: black;"><h2>Coming Soon</h2></a>
@@ -124,17 +124,4 @@
     </div>
     <script src="main.js"></script>
 </body> 
-<footer>
-  <div class="footer-container">
-      <div class="footer-section">
-          <a href="#" style="color: #A8DADC;"><h3>Email</h3></a>
-      </div>
-      <div class="footer-section">
-        <a href="about.html" style="color: #A8DADC;"><h3>About</h3></a>
-      </div>
-      <div class="footer-section">
-        <a href="https://docs.google.com/forms/d/13NupHW2ZiYjLk18UHCy2voDZZXNqEpBbzKxeUeEziDQ/edit" style="color: #A8DADC;"><h3>Join</h3></a>
-      </div>
-  </div>
-</footer>
 </html>
