--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="icon-box projects" data-modal="projects">
                <i class="fa-solid fa-laptop-code"></i>
             </div>
-            <div class="icon-box testimonial" data-modal="testimonial">
+            <div class="icon-box board" data-modal="board">
                <i class="fa-solid fa-users-rectangle"></i>
             </div>
             <div class="icon-box contact" data-modal="contact">
@@ -84,57 +84,18 @@
                </div>
                <div class="project-container">
                   <h1>Community Showcase</h1>
-                  <div class="all-projects">
-                     <div class="project-box">
-                        <img
-                           src="assets/community/vinh_portfolio.png"
-                           alt="" />
-                        <div class="overlay">
-                           <h3>Vinh's Portfolio</h3>
-                           <button class="more-btn">
-                           <span>Learn More</span>
-                           </button>
-                        </div>
-                     </div>
-                     <div class="project-box">
-                        <img
-                           src="assets/placeholder.png"
-                           alt="" />
-                        <div class="overlay">
-                           <h3>Coming Soon</h3>
-                           <button class="more-btn">
-                           <span>Learn More</span>
-                           </button>
-                        </div>
-                     </div>
-                     <div class="project-box">
-                        <img
-                           src="assets/placeholder.png"
-                           alt="" />
-                        <div class="overlay">
-                           <h3>Coming Soon</h3>
-                           <button class="more-btn">
-                           <span>Learn More</span>
-                           </button>
-                        </div>
-                     </div>
-                     <div class="project-box">
-                        <img
-                           src="assets/placeholder.png"
-                           alt="" />
-                        <div class="overlay">
-                           <h3>Coming Soon</h3>
-                           <button class="more-btn">
-                           <span>Learn More</span>
-                           </button>
-                        </div>
-                     </div>
+                  <div class="projects-list">
+                     <ul>
+                        <li>
+                           <a href="https://vtran.org/" target="_blank">Vinh's Portfolio</a>
+                        </li>
+                     </ul>                     
                   </div>
                </div>
             </div>
          </div>
       </div>
-      <div class="popup" id="testimonial">
+      <div class="popup" id="board">
          <div class="popup-container">
             <div class="popup-header">
                <div class="button-container">
@@ -149,7 +110,7 @@
                   </button>
                </div>
             </div>
-            <div class="popup-body testimonial-container">
+            <div class="popup-body board-container">
                <h1>Meet the Team</h1>
                <div class="slider-container">
                   <div class="swiper">
@@ -162,8 +123,9 @@
                               <h2>Vinh Tran</h2>
                            </div>
                            <p>
-                              President, Class of 2025
-                           </p>
+                              <u>President, Class of 2025</u><br><br>
+                              I enjoy doing Leetcode problems in my free time, and going on bike rides with my friends.
+                           </p>                           
                         </div>
                         <div class="swiper-slide">
                            <div class="user-info">
@@ -173,7 +135,8 @@
                               <h2>William Liang</h2>
                            </div>
                            <p>
-                              Vice-President, Class of 2025
+                              <u>Vice-President, Class of 2025</u><br><br>
+                              Other than coding, I play volleyball throughout the year. I know Java, and Python as well. 
                            </p>
                         </div>
                         <div class="swiper-slide">
@@ -184,7 +147,8 @@
                               <h2>Simon Ha</h2>
                            </div>
                            <p>
-                              Officer, Class of 2025
+                              <u>Officer, Class of 2025</u><br><br>
+                              I can create cool things using CAD and know Python, in addition to basic web design.
                            </p>
                         </div>
                         <div class="swiper-slide swiper-no-swiping">
@@ -195,7 +159,8 @@
                               <h2>Jiebin Fang</h2>
                            </div>
                            <p>
-                              Officer, Class of 2025
+                              <u>Officer, Class of 2025</u><br><br>
+                              A member of robotics, and I enjoy putting together PCs or anything hardware related.
                            </p>
                         </div>
                      </div>
@@ -326,6 +291,6 @@
       </script>
       <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
       <script src="scripts/noise.js"></script>
-      <script src="scripts/macos.js"></script>
+      <script src="scripts/macos.js"></script> 
    </body>
 </html>
