--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>BLS Web Development</title>
+      <link rel="icon" type="image/x-icon" href="assets/favicon.png">
       <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
       <link rel="stylesheet" href="styles/noise.css">
